--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -193,6 +193,9 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-build-env
 
+      - run:
+          sudo apt-get install faketime pdf2svg
+
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
