--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -209,7 +209,7 @@ jobs:
       - name: Prepare docs
         shell: bash
         run:
-          make docs/source/cmd/abc.rst docs/gen_examples docs/gen_images docs/guidelines docs/usage docs/reqs TARGETS= EXTRA_TARGETS= CONFIG=$CC
+          make docs/source/cmd/abc.rst TARGETS= EXTRA_TARGETS= CONFIG=$CC
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
