--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -214,7 +214,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: cmd-ref-${{ github.ref }}
+          name: cmd-ref-${{ github.sha }}
           path: docs/source/cmd
 
       - name: Trigger RTDs build
