--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -194,7 +194,7 @@ jobs:
         uses: ./.github/actions/setup-build-env
 
       - run:
-          sudo apt-get install faketime pdf2svg
+          sudo apt-get install faketime pdf2svg texlive-latex-base texlive-latex-extra
 
       - name: Download build artifact
         uses: actions/download-artifact@v4
@@ -209,7 +209,7 @@ jobs:
       - name: Prepare docs
         shell: bash
         run:
-          make docs/source/cmd/abc.rst docs/guidelines docs/usage docs/reqs TARGETS= EXTRA_TARGETS= CONFIG=$CC
+          make docs/source/cmd/abc.rst docs/gen_examples docs/gen_images docs/guidelines docs/usage docs/reqs TARGETS= EXTRA_TARGETS= CONFIG=$CC
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
