prepare-docs: What if we uploaded

--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -218,6 +218,8 @@ jobs:
           path: |
             docs/source/cmd
             docs/source/generated
+            docs/source/_images
+            docs/source/code_examples
 
       - name: Trigger RTDs build
         uses: dfm/rtds-action@v1.1.0
