--- a/.github/workflows/test-compile.yml
+++ b/.github/workflows/test-compile.yml
@@ -30,11 +30,16 @@ jobs:
           - ubuntu-latest
         compiler:
           # oldest supported
+          - 'clang-10'
+          - 'clang-11'
+          - 'clang-12'
+          - 'clang-13'
           - 'clang-14'
-          - 'gcc-10'
-          # newest, make sure to update maximum standard step to match
+          - 'clang-15'
+          - 'clang-16'
+          - 'clang-17'
           - 'clang-18'
-          - 'gcc-13'
+          - 'clang-19'
         include:
           # macOS
           - os: macos-13
@@ -62,18 +67,3 @@ jobs:
         run: |
           $CC --version
           $CXX --version
-
-      # minimum standard
-      - name: Build C++17
-        shell: bash
-        run: |
-          make config-$CC_SHORT
-          make -j$procs CXXSTD=c++17 compile-only
-
-      # maximum standard, only on newest compilers
-      - name: Build C++20
-        if: ${{ matrix.compiler == 'clang-18' || matrix.compiler == 'gcc-13' }}
-        shell: bash
-        run: |
-          make config-$CC_SHORT
-          make -j$procs CXXSTD=c++20 compile-only
